# nexus

./: Cargo.toml
nexus/: Cargo.toml
nexus/src/: chat.rs  login.rs  main.rs
nexus_core/: Cargo.toml
nexus_core/src/: error.rs  lib.rs  model.rs
nexus_net/: Cargo.toml
nexus_net/src/: lib.rs
nexus_server/: Cargo.toml  postgres.sql
nexus_server/src/: error.rs  lib.rs  main.rs
nexus_server/src/db/: messages.rs  mod.rs  users.rs
nexus_server/src/entity/: group_members.rs  groups.rs  messages.rs  mod.rs  prelude.rs  users.rs
