[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus_core = { path = "../nexus_core" }
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }


[build-dependencies]
slint-build = "1.8"
