[package]
name = "nexus_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio-tungstenite = "0.24.0"
reqwest = "0.12"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
