[package]
name = "nexus_server"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus_core = { path = "../nexus_core" }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
lazy_static = "1.5.0"
warp = "0.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sea-orm = {version = "1", features = ["sqlx-postgres", "runtime-tokio-native-tls"]}
chrono = "0.4"
thiserror = "1"